--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@compiled/babel-plugin": "^0.17.2",
+    "@types/react": "^18.0.26",
     "babel-plugin-styled-components": "^2.0.7",
     "css-loader": "^6.7.3",
     "css-minimizer-webpack-plugin": "^4.2.2",
@@ -23,6 +26,7 @@
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "stylelint-declaration-strict-value": "^1.9.1",
-    "stylelint-processor-styled-components": "^1.10.0"
+    "stylelint-processor-styled-components": "^1.10.0",
+    "typescript": "^4.9.4"
   }
 }
